	  cursor offscreen and onto a different page. (DLR, found by
	  Mike Frysinger)
  display_string()
	- Fix minor memory leak. (DLR)
	- Fix memory corruption problems caused by not allocating enough
	  space for converted when a line ends in a tab(s) and we're not
	  in UTF-8 mode. (DLR, found by Duncan Geoffry Doyle, Nick
	  Warne, and Mike Frysinger)
- doc/faq.html:
	- Update the Free Translation Project's address. (DLR)
- doc/nano.1:
	- Better display the default values for quotestr. (DLR)
- doc/nanorc.5:
	- Give the default values for the brackets and punct options,
	  and better display the default values for quotestr. (DLR)
	- Mention that quotes inside string parameters don't need to be
	  escaped with backslashes. (John M. Gabriele, minor tweaks by
	  DLR)
- doc/rnano.1:
	- Remove unneeded comments. (DLR)
- doc/nanorc.sample:
	- Remove unneeded comment. (DLR)
	- Mention that quotes inside string parameters don't need to be
	  escaped with backslashes. (John M. Gabriele, minor tweaks by
	  DLR)
- THANKS:
	- Add new Swedish translator.

GNU nano 1.3.10 - 2005.12.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Add the ability to scroll up or down single lines without
	  scrolling the cursor, via Meta-- and Meta-+.  Note that this
	  is disabled when NANO_SMALL is defined.  New functions
	  do_scroll_up() and do_scroll_down(); changes to
	  shortcut_init(). (DLR, suggested by Mike Frysinger)
	- Properly handle mouse clicks on the statusbar prompt text.
	  New functions statusbar_xplustabs() and
	  get_statusbar_page_start(); changes to do_statusbar_mouse(),
	  nanoget_repaint(), nanogetstr(), and statusq(). (DLR)
	- Since the statusbar prompt code needs at least 4 columns in
	  order to work properly, make that the minimum number of
	  columns that nano requires in order to run, and remove
	  assertions and code that make use of a smaller number of
	  columns.  Changes to window_init(), nanoget_repaint(),